Updated Configuration section handling to make the Categories and Groups shared.